# community-organisation

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  events.html  index.html  intro.html  pyproject.toml  references.html  robots.txt  search.json  sitemap.xml  summary.html
.github/ISSUE_TEMPLATE/: bug.yaml  event.yaml
.github/actions/setup-poetry/: action.yaml
.github/workflows/: publish.yaml  verify.yaml
docs/: .gitignore  _quarto.yml  events.qmd  index.qmd  intro.qmd
site_libs/bootstrap/: bootstrap-dark.min.css
